[package]
name = "sesser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.7"
tokio = { version = "1.28.2", features = ["full"] }
hyper = { version = "1.0.0-rc.3", features = ["full"] }
http-body-util = "0.1.0-rc.2" 
rand = "0.8.5"
hex = "0.4.3"
